--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
     const usuarios = {
       "eduardo": {
         senha: "1234",
-        deviceKey: 'j7tn1hj11751618636492'
+        deviceKey: null,
+        plano: 'vitalicio',
       },
       "milena": {
         senha: "abcd",
-        deviceKey: null
+        deviceKey: null,
+        plano: 'vitalicio',
       }
     };
 
