--- a/index.html
+++ b/index.html
@@ -144,11 +144,18 @@
       "eduardo": {
         senha: "1234",
         deviceKey: null,
+        deviceKey2: null,
+        deviceKey3: null,
+        deviceKey4: null,
         plano: 'vitalicio',
       },
       "milena": {
         senha: "abcd",
         deviceKey: null,
+        deviceKey: null,
+        deviceKey2: null,
+        deviceKey3: null,
+        deviceKey4: null,
         plano: 'vitalicio',
       }
     };
