--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     const usuarios = {
       "eduardo": {
         senha: "1234",
-        deviceKey: null,
+        deviceKey: '8irgc45g1751626775206',
         deviceKey2: null,
         deviceKey3: null,
         deviceKey4: null,
