--- a/planos.html
+++ b/planos.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-br" class="bg-black text-white">
    
@@ -9,7 +11,7 @@
 </head>
 <style>
     body{
-        background: url('img/bg_dark.jpg') no-repeat center center fixed;
+        background: url('img/bg.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 </style>
