--- a/filmes.html
+++ b/filmes.html
@@ -380,7 +380,7 @@
 
   <div id="loading-screen">
     <div class="loading-content">
-      <div class="vhs-noise"></div>
+      <!--<div class="vhs-noise"></div>-->
       <center>
         <h1 class="glitch">📼 Carregando fita VHS...</h1>
         <div class="loading-bar">
