Sync autom├ítico pelo script .bat

--- a/adm.html
+++ b/adm.html
@@ -4,7 +4,7 @@
 <script src="filmes.js"></script>
 <!---------------------------------->
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     button {
         padding: 1vw;
@@ -13,7 +13,7 @@
         color: aliceblue;
         font-size: x-large;
         width: 40vw;
-        font-size: 3vw;
+        font-size: 5vw;
         margin-top: 5px;
         cursor: pointer;
     }
@@ -46,6 +46,8 @@
 </style>
 
 <center>
+    <button onclick="window.location.reload()">Esconder tudo</button><br>
+    <button onclick="window.location.href='perfil.html'">Voltar</button><br><br>
     <button id="clearStorage">clear Storage</button><br>
     <button id="ListarUsers">Listar users</button><br>
     <button id="ListarUsers2">Listar users 2</button><br>
